# Proteus

./: .gitignore  .gitmodules  README.md  pyproject.toml
notebooks/: phase1_cloud_bootstrap.ipynb
scripts/: 00_smoke_test.py  00b_generate_entity_prompts.sh  01_cache_entity_acts.sh  02_cache_pile_acts.sh  03_feature_analysis.sh  04_steering.sh  patch_upstream.sh
src/proteus/: __init__.py  config.py
