[project]
name = "proteus"
version = "0.1.0"
description = "Proteus — A Mechanistic Taxonomy of Hallucination"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.12"

# Dependency strategy
# -------------------
# Upstream `vendor/sae_entities/requirements.txt` is a `pip freeze` snapshot
# with ~170 packages, several of which (pyairports==2.1.1, vllm-shipped
# transitives) cannot be resolved from public PyPI. We therefore curate the
# direct dependencies based on what upstream's *code* actually imports
# (verified by greping `^(import|from)` across the repo), and let uv resolve
# transitives.
#
# Tight pins are kept on the science-critical stack — torch, transformers,
# transformer-lens, numpy, tokenizers, huggingface-hub, accelerate, datasets,
# safetensors, vllm — at the exact versions upstream pinned. This is the
# scientifically meaningful part: changing transformers or numpy could
# perturb model activations and invalidate the SAE-decomposition results.
# Looser pins on plotting / analysis libraries since they don't affect the
# numerical pipeline.
dependencies = [
    # === Science-critical: must match upstream exactly ===
    "torch==2.4.0",
    "torchvision==0.19.0",
    "triton==3.0.0",
    "transformers==4.44.2",
    "transformer-lens==2.6.0",
    "tokenizers==0.19.1",
    "huggingface-hub==0.25.0",
    "safetensors==0.4.5",
    "accelerate==0.34.2",
    # datasets: upstream pinned 3.0.2 but sae-lens 4.4.x requires datasets<3.0.0.
    # Loosened to a range; sae-lens will drive the exact version. Verified that
    # upstream's datasets imports are stable across the 2.x line.
    "datasets>=2.18,<4",
    "sentencepiece==0.2.0",
    "numpy==1.26.4",  # numpy 2.x breaks torch 2.4 + transformers 4.44

    # === Generation backend (upstream uses vllm in utils/generation_utils.py) ===
    "vllm==0.6.1.post2",
    "xformers==0.0.27.post2",
    "litellm==1.46.6",

    # === Analysis & plotting (loose pins, science-irrelevant) ===
    "pandas>=2.2,<3",
    "scipy>=1.12,<2",
    "scikit-learn>=1.5,<2",
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<1",
    "plotly>=5.20,<6",
    "kaleido==0.2.1",  # plotly static export — exact pin avoids known breakage in newer versions
    "adjustText>=1.0,<2",
    "neel-plotly @ git+https://github.com/neelnanda-io/neel-plotly.git",

    # === Tensor / einsum helpers ===
    "einops>=0.8,<1",
    "fancy-einsum>=0.0.3,<1",
    "jaxtyping>=0.2.34,<1",
    # typeguard is jaxtyping's runtime checker. Upstream pins 2.13.3 because
    # newer versions (3.x, 4.x) changed the API and break jaxtyping's annotations.
    "typeguard==2.13.3",

    # === SAE library — installed separately by upstream's README step 1 ===
    # Must be compatible with transformer-lens 2.6.0. sae-lens 4.x line works;
    # 5.x has API changes. We pin to a specific 4.x release that ships with
    # GemmaScope canonical loaders.
    "sae-lens>=4.4,<5.0",

    # === Dataset / labeling helpers used by upstream's wikidata + triviaqa scripts ===
    "thefuzz>=0.22,<1",  # missing from upstream's requirements.txt but imported in check_correctness_wikidata.py and triviaqa_queries.py
    "python-dotenv>=1.0,<2",

    # === Notebook + IO ===
    "tqdm>=4.66,<5",
    # colorama is imported by upstream's mech_interp/steering_it.py and utils/utils.py
    # for ANSI-coloured generation diffs. Required for Phase 1 step 04.
    "colorama>=0.4.6,<1",
    "ipykernel>=6.29,<7",
    "ipython>=8.27,<9",
    "jupyter>=1.0,<2",
    "nbformat>=5.10,<6",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Required because `neel-plotly` is a git URL direct reference. Hatchling
# refuses these by default; flipping this lets us keep the upstream-style
# git pin without falling back to a fork on PyPI.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/proteus"]

[tool.uv]
# Restrict resolution to Linux x86_64 — the only platform we run on.
# Local dev: laptop Linux (no model load). Execution: Colab/Kaggle/RunPod
# Linux GPU instances. vllm and several nvidia-* wheels have no
# Darwin/Windows builds, so resolving for those platforms produces spurious
# unsatisfiable errors.
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
